--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,6 +1,5 @@
 ﻿@using ClinicProject
 @using ClinicProject.Models
 @using ClinicProject.ViewModels
-@using ClinicApp.ViewModels
-@using ClinicApp
+@using Microsoft.AspNetCore.Mvc.Rendering
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
