--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -16,7 +16,7 @@
     </div>
     
 
-    <button class="btn btn-primary" type="submit">Register</button>
+    <button class="btn btn-primary" type="submit">Login</button>
 </form>
 
 @section Scripts {
